--- a/less/mixins.less
+++ b/less/mixins.less
@@ -17,15 +17,15 @@ btn.hover {
 
 @media only screen and (max-width: 500px) {
   .btn {
-      font-size: 20px;
-      background-color: #080d2f;
-      border-radius: 6px;
-      width: 459px;
-      height: 71px;
-      text-align: center;
-      padding: 25px;
-      color: white;
-      margin-left: -19px;
-      margin-bottom: -20px;
-  }
+    font-size: 20px;
+    background-color: #080d2f;
+    border-radius: 6px;
+    width: 459px;
+    height: 71px;
+    text-align: center;
+    padding: 25px;
+    color: white;
+    margin-left: -9px;
+    margin-bottom: -20px;
+}
 }
